fixed mobile overflow

--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -5,10 +5,11 @@
     align-items: center;
     box-sizing: border-box;
     padding: 2.5rem;
+    overflow: hidden;
 
     @media screen and (max-width: 44em){
         padding: 2.5rem 0;
-        min-width: 44rem;
+        width: 35rem;
     }
 
     
