--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,11 +35,12 @@ body{
     box-sizing: border-box;
     width: 90%;
     margin: 0 auto;
-
-    @media screen and (min-width: 700px) {
-        
-        width:700px;
-        
-    }
 }
 
+@media screen and (min-width: 700px) {
+    .container{
+        width: 700px;
+    }
+
+}
+  
